--- a/server/config.json
+++ b/server/config.json
@@ -1,3 +1,12 @@
 {
-  "debug": true
+  "debug": true,
+  "port": 8081,
+  "mysql": {
+    "host": "localhost",
+    "port": 3306,
+    "charset": "utf8",
+    "database": "db_name",
+    "username": "root",
+    "password": "123456"
+  }
 }
