--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_quick_start
+name: video_getter
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
