--- a/server/config.json
+++ b/server/config.json
@@ -5,8 +5,8 @@
     "host": "localhost",
     "port": 3306,
     "charset": "utf8",
-    "database": "db_name",
+    "database": "mediadb",
     "username": "root",
-    "password": "123456"
+    "password": ""
   }
 }
