--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -51,7 +51,9 @@ dependencies:
   flutter_easyloading: ^2.0.0
   # clipboard - https://pub.flutter-io.cn/packages/clipboard
   clipboard: ^0.1.2+8
-  
+  # url_launcher - https://pub.flutter-io.cn/packages/url_launcher
+  url_launcher: ^5.7.8
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
